css fix: content shifting to left when menu opens

--- a/style.css
+++ b/style.css
@@ -21,11 +21,13 @@
   background: #111;
   color: #fff;
   z-index: 2;
-  transition: 0.5s;
+  transition: 1.5s;
 }
 .showcase.active {
   right: 300px;
+  padding-left: 400px;
 }
+
 .showcase header {
 position: absolute;
 top: 0;
@@ -36,10 +38,16 @@ z-index: 1000;
 display: flex;
 align-items: center;
 justify-content: space-between;
+transition: 1.5s;
+}
+
+.showcase.active header {
+  padding-left: 400px;
 }
 .Logo {
   text-transform: uppercase;
   cursor: pointer;
+  flex-grow: 1;
 }
 .toggle {
   position: relative;
@@ -50,6 +58,7 @@ justify-content: space-between;
   background-size: 60px;
   background-position: center;
   cursor: pointer;
+  transition-duration: 1s;
 }
 .toggle.active  {
   background: url('./assests/close.png');
@@ -57,7 +66,7 @@ justify-content: space-between;
   background-size: 25px;
   background-position: center;
   transform: rotate(90deg);
-
+  
 }
 .showcase video {
   position: absolute;
@@ -78,7 +87,7 @@ justify-content: space-between;
   mix-blend-mode: overlay;
 }
 .text {
-  position: relative;
+  position: absolute;
   z-index: 10;
 }
 .text h2 {
@@ -140,7 +149,15 @@ justify-content: space-between;
 }
 .icons {
   width: 70px;
+  height: 70px;
+}
+.icon {
+  width: 80px;
   height: 60px;
+}
+.inst {
+  width: 100px;
+  height: 70px                  ;
 }
 .menu {
   position: absolute;
@@ -152,6 +169,7 @@ justify-content: space-between;
   align-items: center;
   justify-content: center;
 }
+
 .menu ul {
   position: relative;
   line-height: none;
